--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -68,18 +68,18 @@
 
     h2,
     &-subtitle {
-      color: $color-3;
+      color: $color-5;
       font-size: $font-size-xsm;
 
-      span:nth-of-type(1n) {
-        color: $color-3;
-      }
-      span:nth-of-type(2n) {
-        color: $color-2;
-      }
-      span:nth-of-type(3n) {
-        color: $color-5;
-      }
+      // span:nth-of-type(1n) {
+      //   color: $color-3;
+      // }
+      // span:nth-of-type(2n) {
+      //   color: $color-2;
+      // }
+      // span:nth-of-type(3n) {
+      //   color: $color-5;
+      // }
 
       @include breakpoint(sm) {
         font-size: $font-size-sm;
